<resources>

    <string-array name="languages">
        <item>Українська</item>
        <item>English</item>
        <item>Русский</item>
        <item>Polski</item>
    </string-array>

    <string name="sdk_name">VCheckSDKTestHolderApp</string>
    <string name="title_activity_sdkfinish" translatable="false">SDKFinishActivity</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="demo_app_title">Sample VCheck SDK Partner app</string>
    <string name="become_a_partner">Become a partner</string>
    <string name="repeat_demo">Try again</string>

    <string name="verification_in_process_title">You application is processing</string>
    <string name="verification_in_process_subtitle">This may take some time. Please, keep the app in foreground mode.</string>

    <string name="verification_success_title">Verification successful</string>
    <string name="verification_success_descr">You have been verified. Thank you for using our demo. You can retry flow by pressing button below.</string>

    <string name="verification_failed_title">Verification failed</string>
    <string name="verification_failed_descr">Unfortunately, your verification was not successful. You can try again by pressing the button below.</string>

    <string name="full_verification">Full Verification</string>
    <string name="verification_of_documents">Verification Of Documents</string>
    <string name="verification_of_liveness">Verification Of Liveness</string>
    <string name="choose_custom_sdk_ui_colors_optional">Choose custom SDK UI colors (optional):</string>
    <string name="background_primary_color">- Background primary color</string>
    <string name="background_color_for_main_cards_n_and_sections">- Background color for main cards and sections</string>
    <string name="background_color_for_complex_n_buttons_and_smaller_cards">- Background color for complex\n buttons and smaller cards</string>
    <string name="primary_text_color">- Primary text color</string>
    <string name="secondary_text_color">- Secondary text color</string>
    <string name="common_action_buttons_color">- Common action buttons color</string>
    <string name="borders_color">- Borders color</string>
    <string name="icons_color">- Icons color</string>
    <string name="reset_colors">Reset colors</string>

    <string name="partner_inv_title">Become a VCHECK partner</string>
    <string name="partner_inv_form_descr">Fill out the form and our specialist will contact you soon</string>
    <string name="partner_inv_company">Company</string>
    <string name="partner_inv_email">Email</string>
    <string name="partner_inv_name">Name</string>
    <string name="partner_inv_phone">Phone</string>
    <string name="partner_inv_agree">I agree to the processing of personal data</string>
    <string name="send">Become a partner</string>

    <string name="partner_form_successfully_sent">The form has been submitted successfully. We will contact you shortly. Thank you for your interest in our product!</string>
    <string name="partner_form_request_error">Error: form was not successfully submitted</string>

    <string name="et_enter_valid_email">Please enter valid email</string>
    <string name="et_enter_valid_name">Please enter valid name</string>
    <string name="et_enter_valid_company">Please enter valid company name</string>
    <string name="et_enter_valid_phone">Please enter valid phone</string>

    <string name="agreement_not_checked">To continue you have to agree from data processing</string>

    <string name="upload_design_config_descr">You can paste json text data from clipboard with the theme config generated by our service to customize UI/UX looks</string>
    <string name="upload_design_config_file">Paste</string>

</resources>