<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vcheck_background_primary"
    android:theme="@style/Theme.VCheckAndroidSDKDemo"
    tools:context="com.vcheck.demo.activities.LaunchSchemeActivity">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ScrollView
            android:id="@+id/content_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/vcheck_background_primary">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/launchSDKFullFlowCommonBtn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="90dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/vcheck_primary"
                    android:text="@string/full_verification"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/launchSDKDocOnlyCommonBtn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="170dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/vcheck_primary"
                    android:text="@string/verification_of_documents"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/launchSDKLivenessOnlyCommonBtn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="250dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/vcheck_primary"
                    android:text="@string/verification_of_liveness"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/vcheck_background_primary">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="137dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>